[package]
name = "rs-xterm-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.39", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MouseEvent",
    "HtmlCanvasElement",
] }
